--- a/_sass/minimal-mistakes/_archive.scss
+++ b/_sass/minimal-mistakes/_archive.scss
@@ -223,15 +223,15 @@
     }
   }
 
-  .archive__item-teaser {
-    @include breakpoint($small) {
-      max-height: 200px;
-    }
+  // .archive__item-teaser {
+  //   @include breakpoint($small) {
+  //     max-height: 200px;
+  //   }
 
-    @include breakpoint($medium) {
-      max-height: 120px;
-    }
-  }
+  //   @include breakpoint($medium) {
+  //     max-height: 120px;
+  //   }
+  // }
 }
 
 /*
